# vexcl-NeuralNetwork

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mathWrapper.hpp  nn-impl.cpp  nn.cpp  nn.hpp
